--- a/css/formations.css
+++ b/css/formations.css
@@ -61,7 +61,7 @@
     margin: 20px 0;
 }
 
-/* Changement de résolution */
+/* Changement de résolution / Change in resolution */
 
 @media screen and (max-width:1250px)
 {
