--- a/css/accueil.css
+++ b/css/accueil.css
@@ -98,6 +98,16 @@
     z-index: -1;
 }
 
+.playAndPause
+{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    filter: drop-shadow(0px 0px 2px #000);
+}
+
 /* Changement de résolution */
 
 @media screen and (max-width:700px)
